CLARIO-2581 - Simple Workflow Project ---- - Refactor Event to be individual subclasses, theory is hard classes are easier to work with than reflection/maps.